--- a/output/archives.html
+++ b/output/archives.html
@@ -10,6 +10,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">Portfolio </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/yeah.html">yeah</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -17,6 +18,8 @@
 <h1>Archives for Portfolio</h1>
 
 <dl>
+    <dt>Fri 31 December 2100</dt>
+    <dd><a href="/with-meta-file2.html">With .meta2 File</a></dd>
     <dt>Sun 03 October 2010</dt>
     <dd><a href="/my-super-post.html">My super title</a></dd>
 </dl>
