--- a/output/authors.html
+++ b/output/authors.html
@@ -10,6 +10,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">Portfolio </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/yeah.html">yeah</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -19,6 +20,7 @@
     <ul>
         <li><a href="/author/alexis-metaireau.html">Alexis Metaireau</a> (1)</li>
         <li><a href="/author/conan-doyle.html">Conan Doyle</a> (1)</li>
+        <li><a href="/author/mustafa-ray.html">Mustafa Ray</a> (1)</li>
     </ul>
 </section>
 
