--- a/output/categories.html
+++ b/output/categories.html
@@ -10,11 +10,13 @@
         <header id="banner" class="body">
                 <h1><a href="/">Portfolio </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/yeah.html">yeah</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Portfolio</h1>
     <ul>
+        <li><a href="/category/misc.html">misc</a> (1)</li>
         <li><a href="/category/yeah.html">yeah</a> (1)</li>
     </ul>
         <section id="extras" class="body">
