--- a/output/tags.html
+++ b/output/tags.html
@@ -10,6 +10,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">Portfolio </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/yeah.html">yeah</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -18,6 +19,7 @@
     <h1>Tags for Portfolio</h1>
     <ul>
         <li><a href="/tag/awesome.html">awesome</a> (1)</li>
+        <li><a href="/tag/test.html">Test</a> (1)</li>
         <li><a href="/tag/thats.html">thats</a> (1)</li>
     </ul>
 </section>
