--- a/output/authors.html
+++ b/output/authors.html
@@ -3,21 +3,22 @@
 <head>
         <meta charset="utf-8" />
         <title>Portfolio - Authors</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="kochatice.github.io/theme/css/main.css" />
+        <link href="kochatice.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Portfolio Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Portfolio </a></h1>
+                <h1><a href="kochatice.github.io/">Portfolio </a></h1>
                 <nav><ul>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="kochatice.github.io/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Portfolio</h1>
     <ul>
-        <li><a href="/author/mustafa-ray.html">Mustafa Ray</a> (1)</li>
+        <li><a href="kochatice.github.io/author/mustafa-ray.html">Mustafa Ray</a> (1)</li>
     </ul>
 </section>
 
@@ -34,6 +35,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="kochatice.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
