--- a/output/tags.html
+++ b/output/tags.html
@@ -3,22 +3,21 @@
 <head>
         <meta charset="utf-8" />
         <title>Portfolio - Tags</title>
-        <link rel="stylesheet" href="kochatice.github.io/theme/css/main.css" />
-        <link href="kochatice.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Portfolio Atom Feed" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="kochatice.github.io/">Portfolio </a></h1>
+                <h1><a href="/">Portfolio </a></h1>
                 <nav><ul>
-                    <li><a href="kochatice.github.io/category/misc.html">misc</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Portfolio</h1>
     <ul>
-        <li><a href="kochatice.github.io/tag/test.html">Test</a> (1)</li>
+        <li><a href="/tag/test.html">Test</a> (1)</li>
     </ul>
 </section>
 
@@ -35,7 +34,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="kochatice.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
